# IAA_PROJECT2

./: .gitignore  CMakeLists.txt  test.txt
include/: alrogithm.h  common-defines.h  config.h  data.h  file-handler.h  helper_functions.h
src/: algorithm.c  common-defines.c  config.c  data.c  file-handler.c  helper_functions.c  main.c
